--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: 
-author: 
-email: 
+title: Smiles & Tales
+author: Lavinia Grigore
+email: lavinia.gregory@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
 
 # Build settings
@@ -37,6 +37,9 @@ collections:
     feeds:
         output: true
         permalink: /:path
+    images:
+        output: true
+        permalink: /:path/
 
 paginate: 10
 paginate_path: '/blog/page:num/'
@@ -44,7 +47,7 @@ repository:
 
 footer-links:
   dribbble:
-  email: 
+  email: lavinia.gregory@gmail.com
   facebook: 
   flickr:
   github: 
